prover-ray/zkcdriver/testdata/synced/invalid/memory_15.zkc
//error:3:1-39:duplicate declaration
input buffer(addr:u16) -> (bytes:u8)
output buffer(addr:u32) -> (words:u16)
